--- a/_config.yml
+++ b/_config.yml
@@ -9,7 +9,7 @@
 title: Writing Theory
 
 # Your name to show in the footer
-author: Some Person
+author: Carson Long
 
 # --- List of links in the navigation bar --- #
 
@@ -24,14 +24,14 @@ navbar-links:
 
 # Image to show in the navigation bar - works best with a square image
 # Remove this parameter if you don't want an image in the navbar
-avatar: "/assets/img/avatar-icon.png"
+avatar: "/assets/img/wt-logo/Writing Theory-logos.jpeg"
 
 # By default, the image is cut into a circle. You can disable this behaviour by setting 'round-avatar: false'
 round-avatar: true
 
 # If you want to have an image logo in the top-left corner instead of having the title of the website,
 # then specify the following parameter
-#title-img: /path/to/image
+# title-img: "/assets/img/wt-logo/Writing Theory-logos_black.png"
 
 
 # --- Footer social media links --- #
